--- a/.env
+++ b/.env
@@ -9,6 +9,12 @@ PGADMIN_USER=italo.magalhaes@gsuite.iff.edu.br
 PGADMIN_PASSWORD=123
 PGADMIN_CONT=aws_pgadmin
 
+DB_HOST=aws_psql
+DB_USER=postgres
+DB_PASS=123
+DB_NAME=aws_db
+DB_PORT=5432
+
 DOCKER_TARGET=development
 
 APP_PORT=3001
