--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 services:
   
   aws_psql:
-    image: postgres:alpine
+    image: postgres:15-alpine
     ports:
       - ${DB_PORT}:5432
     container_name: ${DB_HOST}
@@ -27,7 +27,6 @@ services:
           - DB_USERNAME=${DB_USERNAME}
           - DB_PASSWORD=${DB_PASSWORD}
           - DB_DATABASE=${DB_DATABASE}
-          - DB_HOST=aws_psql
     
     links:   #Novo atributo incluso
       - aws_psql
